--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
-    <script src="script.js"></script>
+    <div id="root"></div>
+
+    <script src="script.js" defer></script>
 </body>
 </html>
